--- a/ProgramacionNCapas/Properties/Resources.resx
+++ b/ProgramacionNCapas/Properties/Resources.resx
@@ -121,8 +121,11 @@
   <data name="New-file-icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\New-file-icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Cancel_icon-icons.com_73703 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Cancel_icon-icons.com_73703 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="printer_78349" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\printer_78349.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="new_page_document_16676" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\new_page_document_16676.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="New-file-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\New-file-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,10 +145,16 @@
   <data name="icons8-guardar-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-guardar-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="new_page_document_16676" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\new_page_document_16676.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="view_search_find_9565" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\view_search_find_9565.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="printer_78349" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\printer_78349.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Cancel_icon-icons.com_73703 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Cancel_icon-icons.com_73703 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mimetypes_PostScript_theprinter_349" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mimetypes_PostScript_theprinter_349.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ad_add_12868" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ad_add_12868.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
